* modified find primary question module(Return: alternative primary questions; retrieval questions; match scores; user_query)

--- a/web_server/templates/find_primary.html
+++ b/web_server/templates/find_primary.html
@@ -8,6 +8,7 @@
     <form action="FindPrimary" enctype="multipart/form-data" method="post">
         请输入Question：</br>
         <input type="text" name="question"></br>
+        <input type="text" name="top_n"></br>
         <input type="submit" value="submit"></br>
     </form>
 </body>
