+ add logger and fixed the server module for find direct answer

--- a/web_server/templates/find_answer.html
+++ b/web_server/templates/find_answer.html
@@ -5,10 +5,11 @@
     <title>Question Question Matching</title>
 </head>
 <body>
-    <form action="Match" enctype="multipart/form-data" method="post">
+    <form action="FindAnswer" enctype="multipart/form-data" method="post">
         请输入Question1：</br>
-        <input type="text" name="q1"></br>
-        <input type="text" name="q2"></br>
+        <input type="text" name="question"></br>
+        <input type="text" name="top_n"></br>
+        <input type="text" name="original"></br>
         <input type="submit" value="submit"></br>
     </form>
 </body>
